feat: add application framerate game manager

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\6000.0.36f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.UIToolkit.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Kawaii Survivor\Scripts\GameManager.cs" />
     <Compile Include="Assets\TotalJSON\Scripts\JSON.cs" />
     <Compile Include="Assets\TotalJSON\Examples\ExampleSerializeObjects\ExamplePlayerItemObject.cs" />
     <Compile Include="Assets\Tabsil\Sijil\Scripts\Core\GameData.cs" />
