refactor: EnemyMovement and Player scripts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "roguelike.sln"
+    "dotnet.defaultSolution": "cadeira-jogos.sln"
 }
